Thu Dec 25 10:09:14 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/io/console/console.c (console_dev): id_console is not a
	  constant name, use rb_const_remove() to get rid of NameError.

Thu Dec 25 09:18:55 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/resolv/test_dns.rb (TestResolvDNS#test_query_ipv4_address):
	  set timeout for recvfrom because if client thread is crashed, it
	  waits infinity.

Thu Dec 25 08:42:11 2014  Eric Wong  <e@80x24.org>

	* lib/uri/generic.rb (split_userinfo): fstring for 1-byte split
	  (set_port): reduce bytecode size
	  (check_path): reduce garbage via opt_str_freeze
	  (query=): ditto
	  (fragment=): ditto
	  [misc #10628]
	* lib/uri/rfc3986_parser.rb (regexp): cache as attr
	  (initialize): setup and freeze regexp attr once
	  (split): reduce bytecode size, use opt_str_freeze
	  (parse): minor bytecode and garbage reduction
	  (default_regexp): rename for initialize

Wed Dec 24 20:38:16 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (glob_make_pattern): restrict searching case-insensitive
	  name from the filesystem to only last part, for the performance.
	  [ruby-core:63591] [Bug #10015]

Wed Dec 24 18:21:27 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c: remove unused rb_objspace_t::rgengc::old_objects_at_gc_start.

Wed Dec 24 13:25:22 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* tool/redmine-backporter.rb: require view_changesets permission.

Wed Dec 24 13:00:24 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/downloader.rb (Downloader.download): fix the exception to
	  re-raise.  initialize methods of subclasses of Exception may
	  have different parameters.  [ruby-core:67086] [Bug #10639]

Wed Dec 24 12:16:19 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.h (rb_data_type_t): revert r48647 and revise parent member.
	  [ruby-core:66969] [Bug #10621]

Wed Dec 24 05:40:52 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* tool/downloader.rb: use config.guess in gcc repo.
